added logout added observer for authState added navigation up button in chatRoomActivity

--- a/sample/src/main/res/layout/home_activity.xml
+++ b/sample/src/main/res/layout/home_activity.xml
@@ -10,11 +10,20 @@
         android:layout_height="match_parent"
         tools:context=".HomeActivity" />
 
-    <com.wang.avi.AVLoadingIndicatorView
-        android:id="@+id/view_loading"
-        style="@style/Authentication.AVLoadingIndicatorView"
+    <!--<com.wang.avi.AVLoadingIndicatorView-->
+    <!--android:id="@+id/view_loading"-->
+    <!--style="@style/Authentication.AVLoadingIndicatorView"-->
+    <!--android:layout_centerInParent="true"-->
+    <!--android:visibility="gone" />-->
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:visibility="gone" />
+        android:gravity="center"
+        android:text="This is your Application"
+        android:textSize="27sp"
+        android:textStyle="bold" />
 
     <Button
         android:id="@+id/button_support"
